update food carts